MyDevOrg/src/objects/Employee__c.object
<CustomObject>
    <description>Contains details of Organization Employees</description>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emailid__c</fullName>
        <label>Emailid</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmpName__c</fullName>
        <label>Employee Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office Location</label>
        <picklist>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vijayawada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JK{0000}</displayFormat>
        <label>Employee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>